# subtitle-renamer

./: .gitignore  README.md  build.spec  eslint.config.js  index.html  jsconfig.json  main.py  package.json  pnpm-lock.yaml  requirements.txt  version.py  version.txt  vite.config.js
.github/workflows/: build.yml
gui/: mainui.py  setting.py
image/: icon.icns
module/: config.py  core.py  detectsub.py  function.py  gui.py  run.py
python/: main.py  version.txt
python/.github/workflows/: build.yml
python/src/: function.py
python/src/gui/: mainwindow.py
python/src/module/: config.py  theme.py
python/src/style/: style_light.qss  table_light.qss
src/: Cargo.toml  core.py  function.py  tauri.conf.json
src/gui/: about.py  intro.py  mainwindow.py  setting.py
src/icons/: icon.icns
src/module/: config.py  count.py  counter.py  detectsub.py  version.py
src/src/: extract.rs  file_time.rs  lib.rs  main.rs  menu.rs  theme.rs  trash.rs
src/style/: setting_light.qss  style_dark.qss  style_light.qss  table_dark.qss
style/: style_light.qss  table.qss
ui/: globals.css  main.jsx
ui/components/: badge.jsx  button.jsx  combobox.jsx  context-menu.jsx  dialog.jsx  drop.jsx  input.jsx  nav.jsx  page.jsx  select.jsx  settings.jsx  switch.jsx  table.jsx  toast.jsx  window.jsx
ui/dialogs/: update.jsx
ui/hooks/: useConfig.js
ui/pages/: settings-about.jsx  settings-developer.jsx  settings-general.jsx  settings-rename.jsx  settings.jsx  subtitle.jsx
ui/store/: subtitle.js
ui/utils/: config.js  detect.js  highlight.js  rename.js  sort.js  storage.js  time.js
